--- a/XZNative/Example/index.html
+++ b/XZNative/Example/index.html
@@ -8,7 +8,7 @@
     <script src="../OMApp.js"></script>
     <script src="jquery-3.1.1.min.js"></script>
     <script src="js.js"></script>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="../css.css">
 </head>
 
 <body>
