--- a/XZNative/index.html
+++ b/XZNative/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <title>AppCore</title>
     <script src="Example/jquery-3.1.1.min.js"></script>
-    <script type="module" src="XZNative/XZNative.js"></script>
-    <script>
-//        window.native.startService(function (method, parameters, callbackID) {
-//            XZLog("执行方法 "+ method);
-//            native.execute(callbackID);
-//        }, XZ_DATA_FUNCTION).ready(function () {
-//            XZLog("Did Ready.");
-//
-//            XZLog(native.cookie.value("XZNative.version"));
-//
-//            native.cookie.value("XZNative.version", "1.1.0");
-//
-//            XZLog(native.cookie.value("XZNative.version"));
-//        });
+    <script src="Native/Native.js"></script>
+    <script src="Native/Native.Theme.js"></script>
+    <script src="Native/Native.Login.js"></script>
+    <script src="Native/Native.User.js"></script>
 
+    <script>
+        native.register(function (method, parameters, callbackID) {
+            NLog("执行方法 "+ method);
+            native.execute(callbackID, {
+                currentTheme: "day",
+                currentUser: {
+                    id: 123,
+                    name: "John",
+                    info: {},
+                    version: 1
+                }
+            });
+        }, NativeTypeFunction).ready(function () {
+            NLog("Did Ready.");
+            NLog("Theme: "+ native.currentTheme);
+            NLog("User: "+ native.currentUser.name);
+            NLog(native.cookie.value("XZNative.version"));
+
+            native.cookie.value("XZNative.version", "1.1.0");
+
+            NLog(native.cookie.value("XZNative.version"));
+        });
     </script>
 </head>
 <body>
