调整了 perform 方法：1，支持多个回调函数；2，同步更改了 callback 调用机制。

--- a/Native/index.html
+++ b/Native/index.html
@@ -44,14 +44,15 @@
                     $("#cachedResourceForURLImage").attr("src", url);
                 });
             });
-            
-
-
 
         });
 
 
-
+        native.core.perform("this", {"name": "John"}, function (progress) {
+            NativeLog("Progress: "+ progress);
+        }, function (data) {
+            NativeLog("Data: "+ data);
+        })
 
 
     </script>
@@ -65,6 +66,7 @@
     </table>
     <input type="button" value="Image" id="cachedResourceForURL" />
     <img src="" alt="" id="cachedResourceForURLImage" />
+
 </body>
 </html>
 
