--- a/Native/index.html
+++ b/Native/index.html
@@ -17,7 +17,7 @@
 
     <script>
 
-        NativeLog("Native Version: " + Native.version);
+        Native.log("Native Version: " + Native.version);
 
         native.ready(function () {
 
