--- a/Native/index.html
+++ b/Native/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <title>AppCore</title>
     <script src="Example/jquery-3.1.1.min.js"></script>
-    <script src="Native/Native.js"></script>
-    <!--<script src="Native/Native.Theme.js"></script>-->
-    <!--<script src="Native/Native.Login.js"></script>-->
-    <!--<script src="Native/Native.User.js"></script>-->
-    <!--<script src="Native/Native.Navigation.js"></script>-->
-    <!--<script src="Native/Native.Networking.js"></script>-->
-    <!--<script src="Native/Native.Open.js"></script>-->
-    <!--<script src="Native/Native.EventService.js"></script>-->
-    <!--<script src="Native/Native.DataService.js"></script>-->
-    <!--<script src="Native/Native.Alert.js"></script>-->
+    <script src="native.js/native.js"></script>
+    <script src="native.js/native.Theme.js"></script>
+    <script src="native.js/native.Login.js"></script>
+    <script src="native.js/native.User.js"></script>
+    <script src="native.js/native.Navigation.js"></script>
+    <script src="native.js/native.Networking.js"></script>
+    <script src="native.js/native.Open.js"></script>
+    <script src="native.js/native.EventService.js"></script>
+    <script src="native.js/native.DataService.js"></script>
+    <script src="native.js/native.Alert.js"></script>
 
     <script>
 
         Native.log("Native Version: " + Native.version);
-
+        Native.log("Warning Log Message", 1);
+        Native.log("Error Log Message", 2);
+        
         native.ready(function () {
 
 //            $("#alert").click(function () {
