--- a/Native/index.html
+++ b/Native/index.html
@@ -11,7 +11,7 @@
         if (date1) {
             Native.log("上次访问日期：" + date1, NativeLogStyle.warning);
         }
-        Native.log("Native Version: " + Native.version, NativeLogStyle.error);
+        Native.log("Native Version: " + Native.version, NativeLogStyle.warning);
 
         let date2 = (new Date()).toUTCString();
         Native.cookie.value("date", date2);
@@ -110,102 +110,135 @@
 
 <script>
 
-    native.core.register(function(method, parameters) {
-        if (method == NativeMethod.ready) {
+    // JS 模拟 App 行为。
 
-            Native.log("native 初始化开始：" + (new Date()).toUTCString());
-            // 使用延时来模拟 App 初始化过程。
-            setTimeout(function () {
-                Native.log("native 初始化完成：" + (new Date()).toUTCString());
-                parameters[0]({
-                    currentTheme: "default",
-                    currentUser: {
-                        id: 123,
-                        name: "John",
-                        info: {},
-                        version: 1
-                    },
-                    navigation: {
-                        bar: {
-                            title: "Test",
-                            titleColor: "#000",
-                            isHidden: false,
-                            backgroundColor: "#fff"
-                        }
-                    },
-                    networking: {
-                        status: "WiFi"
-                    }
-                });
-            }, Math.random() * 5000)
+    // URL 交互方式。
 
-        } else if (method === NativeMethod.http) {
-            let request = parameters[0];
-
-            let headers = {
-                "Api-Version": "",
-                "lang": 1,
-                "country": 1876,
-                "currencycode": "SAR",
-                "channel-id": 4,
-                "device-code": "76594ffa5a77276"
-            };
-            if (request.headers) {
-                for (let key in request.headers) {
-                    if (!request.headers.hasOwnProperty(key)) {
-                        continue;
-                    }
-                    headers[key] = request.headers[key];
-                }
-            }
-
-            $.ajax({
-                url: request.url,
-                method: request.method,
-                headers: headers,
-                success: function (data) {
-                    parameters[1](data);
+    native.core.register(function (url) {
+        Native.log(url);
+        if (url.substr(0, 14) === "native://ready") {
+            let id = url.substr(32, 10);
+            let cb = native.core.callback(id);
+            cb({
+                currentTheme: "default",
+                currentUser: {
+                    id: 123,
+                    name: "John",
+                    info: {},
+                    version: 1
                 },
-                error: function (XMLHttpRequest, textStatus, errorThrown) {
-                    parameters[1]({
-                        code: 1,
-                        message: textStatus
-                    });
+                navigation: {
+                    bar: {
+                        title: "Test",
+                        titleColor: "#000",
+                        isHidden: false,
+                        backgroundColor: "#fff"
+                    }
+                },
+                networking: {
+                    status: "WiFi"
                 }
-            })
-
-        } else if (method === NativeMethod.open) {
-            Native.log("Open page: " + parameters[0]);
-        } else if (method === NativeMethod.wasClickedOnElement) {
-            switch (parameters[0]) {
-                case "EventPage":
-                    switch (parameters[1]) {
-                        case "ProductSelectButton":
-                            Native.log("展示商品规格选择页：" + parameters[2].id);
-                            break;
-
-                        case "ProductDetailButton":
-                            Native.log("展示商品详情页：" + parameters[2].id);
-                            break;
-
-                        default: break;
-                    }
-
-                    let callback = parameters[3];
-                    if (callback) {
-                        callback()
-                    }
-                    break;
-
-                case "EventPage2":
-                    break;
-                default:
-                    break;
-            }
-        } else if (method === NativeMethod.track) {
-            Native.log("埋点：" + parameters[0] + " 参数：" + JSON.stringify(parameters[1]));
+            });
         }
-    }, NativeType.javascript);
+
+    }, NativeType.url);
+
+    // native.core.register(function(method, parameters) {
+    //     if (method == NativeMethod.ready) {
+    //
+    //         Native.log("native 初始化开始：" + (new Date()).toUTCString());
+    //         // 使用延时来模拟 App 初始化过程。
+    //         setTimeout(function () {
+    //             Native.log("native 初始化完成：" + (new Date()).toUTCString());
+    //             parameters[0]({
+    //                 currentTheme: "default",
+    //                 currentUser: {
+    //                     id: 123,
+    //                     name: "John",
+    //                     info: {},
+    //                     version: 1
+    //                 },
+    //                 navigation: {
+    //                     bar: {
+    //                         title: "Test",
+    //                         titleColor: "#000",
+    //                         isHidden: false,
+    //                         backgroundColor: "#fff"
+    //                     }
+    //                 },
+    //                 networking: {
+    //                     status: "WiFi"
+    //                 }
+    //             });
+    //         }, Math.random() * 5000)
+    //
+    //     } else if (method === NativeMethod.http) {
+    //         let request = parameters[0];
+    //
+    //         let headers = {
+    //             "Api-Version": "",
+    //             "lang": 1,
+    //             "country": 1876,
+    //             "currencycode": "SAR",
+    //             "channel-id": 4,
+    //             "device-code": "76594ffa5a77276"
+    //         };
+    //         if (request.headers) {
+    //             for (let key in request.headers) {
+    //                 if (!request.headers.hasOwnProperty(key)) {
+    //                     continue;
+    //                 }
+    //                 headers[key] = request.headers[key];
+    //             }
+    //         }
+    //
+    //         $.ajax({
+    //             url: request.url,
+    //             method: request.method,
+    //             headers: headers,
+    //             success: function (data) {
+    //                 parameters[1](data);
+    //             },
+    //             error: function (XMLHttpRequest, textStatus, errorThrown) {
+    //                 parameters[1]({
+    //                     code: 1,
+    //                     message: textStatus
+    //                 });
+    //             }
+    //         })
+    //
+    //     } else if (method === NativeMethod.open) {
+    //         Native.log("Open page: " + parameters[0]);
+    //     } else if (method === NativeMethod.wasClickedOnElement) {
+    //         switch (parameters[0]) {
+    //             case "EventPage":
+    //                 switch (parameters[1]) {
+    //                     case "ProductSelectButton":
+    //                         Native.log("展示商品规格选择页：" + parameters[2].id);
+    //                         break;
+    //
+    //                     case "ProductDetailButton":
+    //                         Native.log("展示商品详情页：" + parameters[2].id);
+    //                         break;
+    //
+    //                     default: break;
+    //                 }
+    //
+    //                 let callback = parameters[3];
+    //                 if (callback) {
+    //                     callback()
+    //                 }
+    //                 break;
+    //
+    //             case "EventPage2":
+    //                 break;
+    //             default:
+    //                 break;
+    //         }
+    //     } else if (method === NativeMethod.track) {
+    //         Native.log("埋点：" + parameters[0] + " 参数：" + JSON.stringify(parameters[1]));
+    //     }
+    // }, NativeType.javascript);
 
     // 模拟 App 行为
 //    native.core.register(function (method, parameters, callbackID) {
