--- a/Native/index.html
+++ b/Native/index.html
@@ -75,8 +75,6 @@
             text-align: center;
             margin: 20px 0 0 0;
         }
-
-
     </style>
 </head>
 <body>
@@ -112,7 +110,7 @@
 
     // JS 模拟 App 行为。
 
-    // URL 交互方式。
+    // 模拟 URL 交互方式。
 
     native.core.register(function (url) {
         Native.log(url);
